--- a/style.css
+++ b/style.css
@@ -5,18 +5,27 @@
 }
 
 header {
-    background:cornflowerblue;
+    background: pink;
     height:10vh;
     text-align: center;
 }
 
 main {
-    background:salmon;
+    background: pink;
     height:90vh;
     display:flex;
 }
+
+#startGame {
+    font-size: 35px;
+}
+
+#buttons {
+    list-style-type: none;
+}
+
 section {
-    background:green;
+    background: skyblue;
     width:70%;
     display: flex;
     align-items:center;
@@ -26,7 +35,7 @@ section h2 {
     font-size:50px;
 }
 aside {
-    background:darkred;
+    background: gold;
     width:30%;
 }
 
@@ -34,4 +43,9 @@ aside {
     margin:50px;
     padding: 10px;
     font-size: 25px;
+}
+
+#scoreList {
+    font-size: 20px;
+    list-style-type: none;
 }
